# 3D

./: .gitignore  3D.sln  README.md
3D/: 3D.rc  3D.vcxproj  3D.vcxproj.filters  Asset.cpp  Asset.h  Asset.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  BilateralBlurShader.h  BilateralBlurShader.hpp  Billboard.cpp  Billboard.hpp  BufferObjects.h  BufferObjects.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  CameraConfigWindow.hpp  ComputeShader.h  ConfigParser.cpp  ConfigParser.h  ConfigParser.hpp  Console.cpp  Console.h  Console.hpp  DebugWindow.hpp  DeferredTileComputeShader.h  DeferredTileCullComputeShader.h  DeferredTileCullComputeShader.hpp  Engine.cpp  Engine.h  Engine.hpp  Event.cpp  Event.h  Event.hpp  File.h  File.hpp  Font.cpp  (+155 more)
3D/include/: Asset.hpp  Billboard.hpp  BufferObjects.hpp  Camera.hpp  Console.hpp  Engine.hpp  Font.hpp  Framebuffer.hpp  GPUModelManager.hpp  Include.hpp  Lights.hpp  List.hpp  MathIncludes.hpp  Model.hpp  Mouse.hpp  QPC.hpp  Renderer.hpp  SceneGraph.hpp  Text.hpp  TextBillboard.hpp  Texture.hpp  Tweaks.hpp  UserInputManager.hpp  Window.hpp  World.hpp
3D/include/core/: Console.hpp  Engine.hpp  Event.hpp  File.hpp  Log.hpp  PhysicsObject.hpp  PhysicsWorld.hpp  Profiler.hpp  SceneGraph.hpp  Tweaks.hpp  World.hpp
3D/include/objectsassets/: Asset.hpp  AssetManager.hpp  Billboard.hpp  Font.hpp  ImageData.hpp  Model.hpp  Text.hpp  TextBillboard.hpp
3D/include/os/: Mouse.hpp  Window.hpp
3D/include/renderer/: BufferObjects.hpp  Camera.hpp  DrawModes.hpp  Framebuffer.hpp  GPUModelManager.hpp  Lights.hpp  Material.hpp  MaterialLibrary.hpp  Renderer.hpp  RendererData.hpp  Sampler.hpp  Texture.hpp  VertexArray.hpp
3D/include/shaders/: BilateralBlurShader.hpp  DeferredTileCullComputeShader.hpp  FrustCullShader.hpp  GBufferShaderBase.hpp  GBufferShaderClay.hpp  GBufferShaderMultiTex.hpp  GBufferShaderNonBindlessRegular.hpp  GBufferShaderTex.hpp  PointShadowPassShader.hpp  PrepMultiTexShader.hpp  SAOShader.hpp  Shader.hpp  ShaderStore.hpp  Shape2DShader.hpp  Shape2DShaderNoTex.hpp  Shape3DShader.hpp  SpotShadowPassShader.hpp  TextShader.hpp
3D/include/ui/: ProfilingWindow.hpp  RenderConfigWindow.hpp  UIAllElements.hpp  UIButton.hpp  UIConsole.hpp  UIElement.hpp  UIElementContainer.hpp  UIInputField.hpp  UILabel.hpp  UIMultiTab.hpp  UIRectangleShape.hpp  UISlider.hpp  UIVertexStore.hpp  UIWindow.hpp  UIWindowManager.hpp  WindowCreator.hpp  WindowScripts.hpp  WorldEditWindow.hpp
3D/include/util/: Bounds3D.hpp  ConfigParser.hpp  GLIncludes.hpp  Include.hpp  MathIncludes.hpp  Rect.hpp  Transform.hpp  Util.hpp  XMLUtil.hpp
3D/libs/bullet/src/BulletCollision/BroadphaseCollision/: btAxisSweep3Internal.h  btOverlappingPairCache.cpp  btQuantizedBvh.cpp  btQuantizedBvh.h  btSimpleBroadphase.cpp
3D/libs/bullet/src/BulletCollision/CollisionDispatch/: btBoxBoxDetector.cpp  btCollisionConfiguration.h  btCollisionObject.h  btCollisionWorld.cpp  btConvexConvexAlgorithm.h  btDefaultCollisionConfiguration.cpp  btSimulationIslandManager.cpp  btUnionFind.h
3D/libs/bullet/src/BulletCollision/CollisionShapes/: btCompoundShape.cpp  btOptimizedBvh.cpp
3D/libs/bullet/src/BulletCollision/Gimpact/: btGenericPoolAllocator.cpp  btGenericPoolAllocator.h  btTriangleShapeEx.h  gim_box_set.h  gim_hash_table.h  gim_linear_math.h
3D/libs/bullet/src/BulletCollision/NarrowPhaseCollision/: btRaycastCallback.cpp
3D/libs/bullet/src/BulletDynamics/ConstraintSolver/: btSequentialImpulseConstraintSolver.cpp
3D/libs/bullet/src/BulletDynamics/Dynamics/: btRigidBody.cpp  btSimulationIslandManagerMt.cpp
3D/libs/bullet/src/BulletDynamics/Featherstone/: btMultiBody.cpp  btMultiBody.h  btMultiBodyConstraint.h  btMultiBodyConstraintSolver.cpp  btMultiBodyDynamicsWorld.cpp
3D/libs/bullet/src/BulletDynamics/MLCPSolvers/: btDantzigLCP.cpp  btDantzigLCP.h  btMLCPSolver.cpp  btPATHSolver.h
3D/libs/bullet/src/LinearMath/: btAlignedAllocator.cpp  btAlignedObjectArray.h  btConvexHull.cpp  btMatrixX.h  btVector3.cpp  btVector3.h
3D/libs/glew/include/GL/: wglew.h
3D/res/: keyBinds.txt  keyBindsTest.txt  resources.txt  tweaks.txt
3D/res/model/: ball2physics.xml  groundphysics.xml  hollowboxphysics.xml
3D/res/shader/: GaussBlur.frag  GaussBlurH.vert  GaussBlurV.vert  Shape2DShader.frag  Shape2DShader.vert  Shape2DShaderNoTex.frag  Shape2DShaderNoTex.vert  Shape3DShader.frag  Shape3DShader.vert  Standard.frag  Standard.vert  bilatBlur.frag  bilatBlur.vert  frustCull.comp  gBufferPass.frag  gBufferPass.vert  gBufferPassClay.frag  gBufferPassClay.vert  gBufferPassMultiTex.frag  gBufferPassMultiTex.vert  gBufferPassNonBindlessRegular.frag  gBufferPassNonBindlessRegular.vert  gBufferPassTex.frag  gBufferPassTex.vert  minMaxZ.comp  pbrShader.comp  pointShadowPass.frag  pointShadowPass.geom  pointShadowPass.vert  prepMultiTex.comp  shadowPass.frag  shadowPass.vert  skybox.frag  skybox.vert  spotShadowPass.frag  spotShadowPass.vert  ssao.frag  ssao.vert  ssao2.frag  ssaoOLD.frag  (+7 more)
3D/res/ui/: ProfilingWindow.xml  RenderConfigWindow.xml  WorldEditWindow.xml  test.xml
3D/src/: Console.cpp  Engine.cpp  Event.cpp  Font.cpp  GPUModelManager.cpp  PhysicsWorld.cpp  Renderer.cpp  Shader.cpp  UIElement.cpp  UIMultiTab.cpp
3D/src/core/: Console.cpp  Engine.cpp  PhysicsObject.cpp  PhysicsWorld.cpp  Profiler.cpp  World.cpp
3D/src/objectsassets/: Asset.cpp  AssetManager.cpp  Billboard.cpp  Font.cpp  Model.cpp  Text.cpp  TextBillboard.cpp
3D/src/os/: Mouse.cpp  Window.cpp
3D/src/renderer/: GPUModelManager.cpp  Lights.cpp  MaterialLibrary.cpp  Renderer.cpp  Shader.cpp
3D/src/shader/: Shader.cpp
3D/src/shaders/: Shader.cpp
3D/src/ui/: ProfilingWindow.cpp  RenderConfigWindow.cpp  UIButton.cpp  UIElement.cpp  UIInputField.cpp  UILabel.cpp  UIMultiTab.cpp  UISlider.cpp  UISwitchButton.cpp  UIWindow.cpp  UIWindowManager.cpp  WindowCreator.cpp  WorldEditWindow.cpp
3D/src/util/: Util.cpp
3D/worlds/: world.txt
